# pythonws-vs-nodews

./: .gitignore  LICENSE  README.md  compose.yml
client/: .dockerignore  Dockerfile  README.md  java-stats.txt  main.py  pyproject.toml  python-stats.txt  rust-stats.txt
cpp/: .dockerignore  Dockerfile  README.md  main.cc  main_old.cc
java/: Dockerfile  README.md  pom.xml
java/src/main/java/com/example/pingpong/: PingPongServerApplication.java
java/src/main/resources/: application.properties  log4j2.xml
nodejs/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json
python/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  server.py
rust/: Cargo.toml  Dockerfile  README.md  main.rs
